pod-security-vpol/restricted/disallow-capabilities-strict/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod11
spec:
  os:
    name: linux
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod06
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod07
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod08
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod09
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-badpod10
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - CHOWN
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
