pod-security-vpol/restricted/disallow-capabilities-strict/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
        - ALL
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  os:
    name: windows
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod06
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod07
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod08
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod09
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: addcap-goodpod10
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - NET_BIND_SERVICE
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
